# similarix-client

./: README.md  pyproject.toml  setup.py
src/similarix/: client.py
